--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                         Un juego en donde pararecera una pregunta en pantalla y opciones respuestas para el
                         juegador, aun que se encuntra en edicion.
                         <a rel="noreferrer" target="_blank" class="btn btn-github"
-                            href="https://github.com/DaltonCuenca/Tres-en-raya">
-                            GITHUB
+                            href="https://www.roblox.com/games/12971326743/Editando-The-Quiz">
+                            ROBLOX
                         </a>
                     </div>
                 </div>
